# nwc.app.OC-python.src

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
clawhub/: SKILL.md  metadata.json
clawhub/examples/: check_balance.py  create_invoice.py  pay_invoice.py
examples/: pay_and_verify.py  quickstart.py
src/nostrnwc/: __init__.py  client.py  connection.py  types.py
src/nostrwalletconnect/: __init__.py  client.py  connection.py
tests/: test_connection.py  test_types.py
