[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nostrnwc"
version = "0.1.0"
description = "Nostr Wallet Connect (NIP-47) SDK for OpenClaw AI entities — pay invoices, check balance, create invoices"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Humanjava Enterprises", email = "dev@humanjava.com" },
]
keywords = ["nostr", "nwc", "wallet-connect", "lightning", "nip-47", "ai", "openclaw"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "nostrkey>=0.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://loginwithnostr.com/openclaw"
Repository = "https://github.com/HumanjavaEnterprises/nwc.app.OC-python.src"
Documentation = "https://loginwithnostr.com/openclaw"

[tool.hatch.build.targets.wheel]
packages = ["src/nostrnwc"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
